--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@tailwindcss/vite": "^4.1.3",
     "framer-motion": "^12.7.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "styled-components": "^6.1.17"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
